unpackaged/main/default/objects/WorkOrder/fields/Asset_Incompletion_Reason__c.field-meta.xml
<CustomField>
    <fullName>Asset_Incompletion_Reason__c</fullName>
    <label>Asset Incompletion Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset not found in storage</fullName>
            </value>
            <value>
                <fullName>Asset not needed – returned to storage</fullName>
            </value>
            <value>
                <fullName>Asset not used – engineer decision</fullName>
            </value>
            <value>
                <fullName>Asset not used – found faulty</fullName>
            </value>
            <value>
                <fullName>Asset not used – wrong type</fullName>
            </value>
            <value>
                <fullName>Customer didn’t provide asset</fullName>
            </value>
            <value>
                <fullName>Issue traced to incoming circuit</fullName>
            </value>
            <value>
                <fullName>No access to replacement location</fullName>
            </value>
            <value>
                <fullName>No part required – issue resolved</fullName>
            </value>
            <value>
                <fullName>Spare not on hand</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ABC</fullName>
                <isActive>false</isActive>
                <label>ABC</label>
            </value>
            <value>
                <fullName>No Asset</fullName>
                <isActive>false</isActive>
                <label>No Asset</label>
            </value>
            <value>
                <fullName>XYZ</fullName>
                <isActive>false</isActive>
                <label>XYZ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>