unpackaged/main/default/objects/WorkOrder/fields/AssetComplete__c.field-meta.xml
<CustomField>
    <fullName>AssetComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AssetComplete</label>
    <type>Checkbox</type>
</CustomField>