unpackaged/main/default/objects/WorkOrder/fields/Create_Month__c.field-meta.xml
<CustomField>
    <fullName>Create_Month__c</fullName>
    <description>Show Create Date in Year-Month Format</description>
    <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))&amp;&quot;-&quot;&amp; RIGHT(&quot;0&quot;+TEXT(MONTH(DATEVALUE(CreatedDate))),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Month</label>
    <type>Text</type>
</CustomField>