unpackaged/main/default/objects/WorkOrder/fields/Create_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Create_Service_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Service Appointment</label>
    <type>Checkbox</type>
</CustomField>