unpackaged/main/default/objects/WorkOrder/fields/Excluded_Technician__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Excluded Technician</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>