unpackaged/main/default/objects/WorkOrder/fields/Information01Int__c.field-meta.xml
<CustomField>
    <fullName>Information01Int__c</fullName>
    <label>Information01Int</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>