unpackaged/main/default/objects/WorkOrder/fields/Initial_Requested_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Initial_Requested_Date_Time__c</fullName>
    <description>shows the customers initial date and time requested</description>
    <inlineHelpText>Customers Initial Requested Date/Time</inlineHelpText>
    <label>Initial Requested Date/Time</label>
    <type>DateTime</type>
</CustomField>