unpackaged/main/default/objects/WorkOrder/fields/Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>Is_Processed__c</fullName>
    <label>Is Processed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>