unpackaged/main/default/objects/WorkOrder/fields/Is_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Processed_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Is Processed Date</label>
    <type>DateTime</type>
</CustomField>