unpackaged/main/default/objects/WorkOrder/fields/LateStartDateDiff__c.field-meta.xml
<CustomField>
    <fullName>LateStartDateDiff__c</fullName>
    <formula>SLA__r.SLA__r.LateStartDateDiff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LateStartDateDiff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>