unpackaged/main/default/objects/WorkOrder/fields/Local_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Local_Create_Date__c</fullName>
    <description>Show Local Create Date based on Address States for its time zone</description>
    <formula>DATE(VALUE(LEFT(Local_Create_Datetime__c,4)),VALUE(MID(Local_Create_Datetime__c,6,02)),VALUE(MID(Local_Create_Datetime__c,9,02)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Create Date</label>
    <type>Date</type>
</CustomField>