unpackaged/main/default/objects/WorkOrder/fields/MP_Arrival_Window_End__c.field-meta.xml
<CustomField>
    <fullName>MP_Arrival_Window_End__c</fullName>
    <formula>DATETIMEVALUE(TEXT(YEAR(SuggestedMaintenanceDate))+&quot;-&quot;+TEXT(MONTH(SuggestedMaintenanceDate))+&quot;-&quot;+TEXT(DAY(SuggestedMaintenanceDate))+&quot; &quot;+LEFT(TEXT( MaintenancePlan.Desired_Arrival_Window_End_Time__c  ),8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MP Arrival Window End</label>
    <type>DateTime</type>
</CustomField>