unpackaged/main/default/objects/WorkOrder/fields/Original_WorkOrder_Identity__c.field-meta.xml
<CustomField>
    <fullName>Original_WorkOrder_Identity__c</fullName>
    <inlineHelpText>If available please provide the original WorkOrder’s Identity</inlineHelpText>
    <label>Original WorkOrder Identity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>