unpackaged/main/default/objects/WorkOrder/fields/Priority_by_SLA__c.field-meta.xml
<CustomField>
    <fullName>Priority_by_SLA__c</fullName>
    <label>Priority by SLA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>