unpackaged/main/default/objects/WorkOrder/fields/Requestor_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Phone_Number__c</fullName>
    <label>Requestor Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>