unpackaged/main/default/objects/WorkOrder/fields/Required_technician__c.field-meta.xml
<CustomField>
    <fullName>Required_technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required technician</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Work Orders (Required technician)</relationshipLabel>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>