unpackaged/main/default/objects/WorkOrder/fields/Requires_Asset__c.field-meta.xml
<CustomField>
    <fullName>Requires_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Asset</label>
    <type>Checkbox</type>
</CustomField>