unpackaged/main/default/objects/WorkOrder/fields/Revisit__c.field-meta.xml
<CustomField>
    <fullName>Revisit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this is a revisit to a customer site after the initial WorkOrder completion.</inlineHelpText>
    <label>Revisit</label>
    <type>Checkbox</type>
</CustomField>