unpackaged/main/default/objects/WorkOrder/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <label>Short Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>