unpackaged/main/default/objects/WorkOrder/fields/Site_Access_Approved__c.field-meta.xml
<CustomField>
    <fullName>Site_Access_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Access Approved</label>
    <type>Checkbox</type>
</CustomField>