unpackaged/main/default/objects/WorkOrder/fields/Site_Access_Approved_Time__c.field-meta.xml
<CustomField>
    <fullName>Site_Access_Approved_Time__c</fullName>
    <label>Site Access Approved Time</label>
    <type>DateTime</type>
</CustomField>