unpackaged/main/default/objects/WorkOrder/fields/Site_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact_Email__c</fullName>
    <label>Site Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>