unpackaged/main/default/objects/WorkOrder/fields/SiteID__c.field-meta.xml
<CustomField>
    <fullName>SiteID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SiteID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>Account.ParentId</field>
            <operation>equals</operation>
            <valueField>$Source.Sub_Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>