unpackaged/main/default/objects/WorkOrder/fields/Vendor_Status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Status__c</fullName>
    <label>Vendor Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>