unpackaged/main/default/objects/WorkOrder/fields/Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type__c</fullName>
    <label>Vendor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electrician</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Gate/Fence</fullName>
            </value>
            <value>
                <fullName>Generator</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Landscape</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pest</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>