unpackaged/main/default/objects/WorkOrder/fields/Work_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_ID__c</fullName>
    <label>Work Order ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>