unpackaged/main/default/objects/WorkOrder/fields/Work_Order_Identity__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Identity__c</fullName>
    <label>Work Order Identity</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>