unpackaged/main/default/objects/WorkOrder/fields/Work_Order_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Integration_ID__c</fullName>
    <label>Work Order Integration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>