unpackaged/main/default/objects/WorkOrder/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <label>Work Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>place holder</fullName>
            </value>
            <value>
                <fullName>place holder2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>