unpackaged/main/default/objects/WorkOrder/validationRules/Cancellation_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &#39;Canceled&#39;)
	&amp;&amp;
Can_be_Cancelled__c = False</errorConditionFormula>
    <errorMessage>This Work Order can&#39;t be canceled because at least one child SA is in progress</errorMessage>
</ValidationRule>