unpackaged/main/default/objects/WorkOrder/validationRules/Cannot_Change_Case_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Case_Number</fullName>
    <active>true</active>
    <description>Does not allow users to change Case Number (Parent) on Work Order</description>
    <errorConditionFormula>AND(ISCHANGED(CaseId),NOT(OR($UserRole.Name = &#39;Admin&#39;, $User.Alias = &#39;platint&#39;)))</errorConditionFormula>
    <errorDisplayField>CaseId</errorDisplayField>
    <errorMessage>Cannot change Case Number</errorMessage>
</ValidationRule>