unpackaged/main/default/objects/WorkOrder/validationRules/Case_Closed_Actions.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Closed_Actions</fullName>
    <active>false</active>
    <description>Don&#39;t allow any actions unless System Admin or LOC Leadership to change &quot;Open Date&quot;</description>
    <errorConditionFormula>OR(
AND($Profile.Name != &#39;System Administrator&#39;,
$User.Alias != &#39;jlasn&#39;,
$User.Alias != &#39;lilliams&#39;,
$User.Alias != &#39;mrhodes&#39;,
$User.Alias != &#39;bwrig&#39;,
ISCHANGED(Open_Date__c)),
AND($Profile.Name != &#39;System Administrator&#39;,
$User.Alias != &#39;jlasn&#39;,
ISPICKVAL(Case.Status, &quot;Closed&quot;)))</errorConditionFormula>
    <errorMessage>This action is not allowed on a closed Case</errorMessage>
</ValidationRule>